# DisplayController

./: .gitignore  ReadMe.md  async_pi_buttons.py  pyproject.toml
src/: display_controller.py  main.py
src/buttons/: async_pi_buttons.py
src/display/: base_display.py  lcd_1602_display.py
src/language/: language_english.py  translator.py
src/languages/: language_template_english.json  language_template_english.py  message_types.py  translator.py
src/utils/: dummy_main_controller.py  messages.py
tests/test_display/: mock_lcd_1602_display.py  test_lcd_1602.py
tests/test_display_controller/: test_cotroller.py
tests/test_translator/: test_language_translator.py
